--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    repositories {
+        mavenCentral()
+    }
+
     dependencies {
         def nav_version = "2.5.2"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        def kotlin_version = "1.7.10"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
